Working on contact section.

--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,9 +1,9 @@
 ﻿<MudGrid id="about" Class="mt-5" Style="border:2px solid red">
     <SectionTitle Title="about me" />
-    <MudItem md="4" sm="12" xs="12" Style="height:500px" Class="mt-5 d-flex justify-center">
+    <MudItem md="4" sm="12" xs="12" Style="height:500px" Class="d-flex justify-center">
         <MudImage Fluid="true" Src="./asset/img/dotnet-bot.png" />
     </MudItem>
-    <MudItem md="8" sm="12" xs="12" Class="mt-5">
+    <MudItem md="8" sm="12" xs="12">
         <MudText Typo="Typo.h5">My name is <span class="mud-primary-text"><strong>Nguyen Gia Huy</strong></span></MudText>
         <MudText Typo="Typo.body1" Class="mt-3">
             I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.
