--- a/src/WASM/Components/Posts.razor
+++ b/src/WASM/Components/Posts.razor
@@ -9,7 +9,7 @@
                 <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large">Read More</MudButton>
             </MudCardActions>
         </MudCard>
     </MudItem>
@@ -22,7 +22,7 @@
                 <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large">Read More</MudButton>
             </MudCardActions>
         </MudCard>
     </MudItem>
@@ -35,7 +35,7 @@
                 <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large">Read More</MudButton>
             </MudCardActions>
         </MudCard>
     </MudItem>
@@ -48,7 +48,7 @@
                 <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large">Read More</MudButton>
             </MudCardActions>
         </MudCard>
     </MudItem>
