--- a/src/WASM/Components/Contact.razor
+++ b/src/WASM/Components/Contact.razor
@@ -1,6 +1,42 @@
-﻿<MudItem xs="12" id="contact">
-    <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
-</MudItem>
-<MudItem xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
+﻿<MudGrid id="contact" Class="mt-5" Style="border:2px solid blue">
+    <SectionTitle Title="contact" />
+    <MudItem md="6" sm="12" xs="12">
+        <MudPaper Class="mt-5 pa-5" Elevation="5" Height="500px">
+            <MudForm>
+                <MudTextField T="string" Class="mt-5" Label="Your name" Variant="Variant.Outlined" />
+                <MudTextField T="string" Class="mt-5" Label="Email" Variant="Variant.Outlined" />
+                <MudTextField T="string" Class="mt-5" Label="Message" Variant="Variant.Outlined" Style="height: 200px" />
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mt-5" Size="Size.Large">Send Message</MudButton>
+            </MudForm>
+        </MudPaper>
+    </MudItem>
+    <MudItem md="6" sm="12" xs="12">
+        <MudPaper Class="mt-5" Elevation="5" Height="500px">
+            <div class="mapouter">
+                <div class="gmap_canvas">
+                    <iframe width="500" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Ho%20Chi%20Minh%20City&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                    </iframe>
+                    <a href="https://2piratebay.org">pirate bay</a>
+                    <br>
+                    <style>
+                        .mapouter {
+                            position: relative;
+                            text-align: right;
+                            height: 100%;
+                            width: 100%;
+                        }
+                    </style>
+                    <a href="https://www.embedgooglemap.net">embed google my maps</a>
+                    <style>
+                        .gmap_canvas {
+                            overflow: hidden;
+                            background: none !important;
+                            height: 100%;
+                            width: 100%;
+                        }
+                    </style>
+                </div>
+            </div>
+        </MudPaper>
+    </MudItem>
+</MudGrid>
