Small updates to layout.

--- a/src/WASM/Components/Contact.razor
+++ b/src/WASM/Components/Contact.razor
@@ -1,7 +1,7 @@
-﻿<MudGrid id="contact" Class="mt-5" Style="border:2px solid blue">
+﻿<MudGrid id="contact" Class="mt-5">
     <SectionTitle Title="contact" />
     <MudItem md="6" sm="12" xs="12">
-        <MudPaper Class="mt-5 pa-5" Elevation="5" Height="500px">
+        <MudPaper Class="pa-5" Elevation="5" Height="500px">
             <MudForm>
                 <MudTextField T="string" Class="mt-5" Label="Your name" Variant="Variant.Outlined" />
                 <MudTextField T="string" Class="mt-5" Label="Email" Variant="Variant.Outlined" />
@@ -11,7 +11,7 @@
         </MudPaper>
     </MudItem>
     <MudItem md="6" sm="12" xs="12">
-        <MudPaper Class="mt-5" Elevation="5" Height="500px">
+        <MudPaper Elevation="5" Height="500px">
             <div class="mapouter">
                 <div class="gmap_canvas">
                     <iframe width="500" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Ho%20Chi%20Minh%20City&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
