--- a/src/WASM/Components/Home.razor
+++ b/src/WASM/Components/Home.razor
@@ -1,6 +1,6 @@
-﻿<MudGrid id="home" Class="mt-a" Style="border:2px solid orange">
+﻿<MudGrid id="home" Class="mt-a">
     <MudItem xs="12" Class="px-0 py-0">
-        <MudPaper Class="d-flex justify-center rounded-xl" Elevation="3" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
+        <MudPaper Class="d-flex justify-center" Elevation="5" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
             <div class="align-self-center">
                 <div class="d-block d-flex justify-center">
                     <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="./asset/img/avatar.png" Height="200" Width="200" Class="rounded-circle" />
