--- a/src/WASM/Components/Portfolio.razor
+++ b/src/WASM/Components/Portfolio.razor
@@ -1,4 +1,4 @@
-﻿<MudGrid id="portfolio" Class="mt-5" Style="border:2px solid deeppink">
+﻿<MudGrid id="portfolio" Class="mt-5">
     <SectionTitle Title="work gallery" />
     <MudItem lg="3" md="4" sm="6" xs="12">
         <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
