--- a/src/WASM/Components/Posts.razor
+++ b/src/WASM/Components/Posts.razor
@@ -1,4 +1,4 @@
-﻿<MudGrid id="posts" Class="mt-5" Style="border:2px solid green">
+﻿<MudGrid id="posts" Class="mt-5">
     <SectionTitle Title="latest posts" />
     <MudItem lg="3" md="4" sm="6" xs="12" Class="d-flex justify-center">
         <MudCard Style="width: 400px">
