--- a/src/WASM/Components/Services.razor
+++ b/src/WASM/Components/Services.razor
@@ -1,4 +1,4 @@
-﻿<MudGrid id="services" Class="mt-5" Style="border:2px solid purple">
+﻿<MudGrid id="services" Class="mt-5">
     <SectionTitle Title="blazing services" />
     <MudItem md="4" sm="6" xs="12">
         <MudCard Elevation="5">
