--- a/src/WASM/Components/Testimonials.razor
+++ b/src/WASM/Components/Testimonials.razor
@@ -1,4 +1,4 @@
-﻿<MudGrid Class="mt-5" Style="border:2px solid brown">
+﻿<MudGrid Class="mt-5">
     <MudItem xs="12">
         <MudPaper Elevation="5" Class="d-flex justify-center align-center" Height="300px" Style="background-image: url('./asset/img/purple_tech.jpg'); background-size: cover; background-repeat: no-repeat">
             <div>
