--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,64 +1,66 @@
-﻿<MudGrid id="about" Class="mt-5" Style="border:2px solid red">
+﻿<MudGrid id="about" Class="mt-5">
     <SectionTitle Title="about me" />
-    <MudItem md="4" sm="12" xs="12" Style="height:500px" Class="d-flex justify-center">
-        <MudImage Fluid="true" Src="./asset/img/dotnet-bot.png" />
+    <MudItem md="4" sm="12" xs="12" Class="d-flex justify-center">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/dotnet-bot.png" Style="height:100%"/>
     </MudItem>
     <MudItem md="8" sm="12" xs="12">
-        <MudText Typo="Typo.h5">My name is <span class="mud-primary-text"><strong>Nguyen Gia Huy</strong></span></MudText>
-        <MudText Typo="Typo.body1" Class="mt-3">
-            I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.
-        </MudText>
-        <MudGrid Class="mt-7">
-            <MudItem md="6" sm="12" xs="12">
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Cake" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Birthday:</strong></MudText>
+        <MudPaper Class="pa-5" Elevation="5" Style="height: 100%">
+            <MudText Typo="Typo.h5">My name is <span class="mud-primary-text"><strong>Nguyen Gia Huy</strong></span></MudText>
+            <MudText Typo="Typo.body1" Class="mt-5">
+                I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.
+            </MudText>
+            <MudGrid Class="mt-5">
+                <MudItem md="6" sm="12" xs="12">
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.Cake" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Birthday:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">26.03.1998</MudText>
                     </div>
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.LocationOn" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Location:</strong></MudText>
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.LocationOn" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Location:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">HCM City, VN</MudText>
                     </div>
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Business" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Study:</strong></MudText>
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.Business" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Study:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">Greenwich</MudText>
                     </div>
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Email" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Email:</strong></MudText>
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.Email" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Email:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">huynguyen260398@gmail.com</MudText>
                     </div>
-            </MudItem>
-            <MudItem md="6" sm="12" xs="12">
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.CalendarMonth" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Age:</strong></MudText>
+                </MudItem>
+                <MudItem md="6" sm="12" xs="12">
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.CalendarMonth" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Age:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">24</MudText>
                     </div>
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.VideogameAsset" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Interests:</strong></MudText>
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.VideogameAsset" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Interests:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">Musics</MudText>
                     </div>
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.School" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Degree:</strong></MudText>
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.School" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Degree:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">Bachelor</MudText>
                     </div>
-                    <div class="row mb-2">
-                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Phone" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
-                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Phone:</strong></MudText>
+                    <div class="row">
+                        <MudIcon Class="col-sm-2" Icon="@Icons.Filled.Phone" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2"><strong>Phone:</strong></MudText>
                         <MudText Class="col-sm-8 text-end">0903.336.493</MudText>
                     </div>
-            </MudItem>
-        </MudGrid>
-        <MudGrid Class="mt-5">
-            <MudItem xs="12">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" StartIcon="@Icons.Filled.FileDownload" Class="mr-5">Download CV</MudButton>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" StartIcon="@Icons.Filled.Send">Send Message</MudButton>
-            </MudItem>
-        </MudGrid>
+                </MudItem>
+            </MudGrid>
+            <MudGrid Class="mt-5">
+                <MudItem xs="12">
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" StartIcon="@Icons.Filled.FileDownload" Class="mr-5">Download CV</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" StartIcon="@Icons.Filled.Send">Send Message</MudButton>
+                </MudItem>
+            </MudGrid>
+        </MudPaper>
     </MudItem>
 </MudGrid>
