--- a/src/WASM/Components/Skills.razor
+++ b/src/WASM/Components/Skills.razor
@@ -1,51 +1,61 @@
-﻿<MudGrid id="skills" Class="mt-5" Style="border:2px solid green">
+﻿<MudGrid id="skills" Class="mt-5">
     <SectionTitle Title="my skills" />
-    <MudItem md="6" sm="12" xs="12">
-        <div class="row">
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary">C#</MudText>
-            </div>
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary" Class="text-end">90%</MudText>
-            </div>
-            <div class="col-12">
-                <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="90" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary">SQL</MudText>
-            </div>
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary" Class="text-end">50%</MudText>
-            </div>
-            <div class="col-12">
-                <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="50" />
-            </div>
-        </div>
-    </MudItem>
-    <MudItem md="6" sm="12" xs="12">
-        <div class="row">
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary">Dot Net</MudText>
-            </div>
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary" Class="text-end">70%</MudText>
-            </div>
-            <div class="col-12">
-                <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="70" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary">Azure</MudText>
-            </div>
-            <div class="col-6">
-                <MudText Typo="Typo.h6" Color="Color.Secondary" Class="text-end">50%</MudText>
-            </div>
-            <div class="col-12">
-                <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="50" />
-            </div>
-        </div>
+    <MudItem xs="12">
+        <MudPaper Elevation="5" Height="300" Class="pa-5">
+            <MudGrid>
+                <MudItem md="6" sm="12" xs="12">
+                    <div class="row">
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6">C#</MudText>
+                        </div>
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6" Class="text-end">90%</MudText>
+                        </div>
+                        <div class="col-12">
+                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="90" />
+                        </div>
+                    </div>
+                </MudItem>
+                <MudItem md="6" sm="12" xs="12">
+                    <div class="row">
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6">SQL</MudText>
+                        </div>
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6" Class="text-end">50%</MudText>
+                        </div>
+                        <div class="col-12">
+                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="50" />
+                        </div>
+                    </div>
+                </MudItem>
+                <MudItem md="6" sm="12" xs="12">
+                    <div class="row">
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6">Dot Net</MudText>
+                        </div>
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6" Class="text-end">70%</MudText>
+                        </div>
+                        <div class="col-12">
+                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="70" />
+                        </div>
+                    </div>
+                </MudItem>
+                <MudItem md="6" sm="12" xs="12">
+                    <div class="row">
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6">Azure</MudText>
+                        </div>
+                        <div class="col-6">
+                            <MudText Typo="Typo.h6" Class="text-end">50%</MudText>
+                        </div>
+                        <div class="col-12">
+                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="50" />
+                        </div>
+                    </div>
+                </MudItem>
+            </MudGrid>
+        </MudPaper>
     </MudItem>
 </MudGrid>
