Small updates to layout.

--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,5 +1,5 @@
 ﻿<MudGrid id="about" Class="mt-5">
-    <SectionTitle Title="about me" />
+    <SectionTitle Title="Some Words About Me" />
     <MudItem md="4" sm="12" xs="12" Class="d-flex justify-center">
             <MudImage Elevation="5" Fluid="true" Src="./asset/img/dotnet-bot.png" Style="height:100%"/>
     </MudItem>
