--- a/src/WASM/Components/Contact.razor
+++ b/src/WASM/Components/Contact.razor
@@ -1,5 +1,5 @@
 ﻿<MudGrid id="contact" Class="mt-5">
-    <SectionTitle Title="contact" />
+    <SectionTitle Title="Get In Contact With Me" />
     <MudItem md="6" sm="12" xs="12">
         <MudPaper Class="pa-5" Elevation="5" Height="500px">
             <MudForm>
