--- a/src/WASM/Components/Home.razor
+++ b/src/WASM/Components/Home.razor
@@ -1,13 +1,13 @@
-﻿<MudGrid id="home" Class="mt-a">
-    <MudItem xs="12" Class="px-0 py-0">
+﻿<MudGrid Class="mt-a">
+    <MudItem xs="12">
         <MudPaper Class="d-flex justify-center" Elevation="5" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
             <div class="align-self-center">
                 <div class="d-block d-flex justify-center">
                     <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="./asset/img/avatar.png" Height="200" Width="200" Class="rounded-circle" />
                 </div>
-                <MudChip Color="Color.Secondary" Class="d-block mt-5" Style="height: 50px">
-                    <MudText Typo="Typo.h5" Align="Align.Center">Hi! My name is Huy and I am a DotNet developer.</MudText>
-                </MudChip>
+                <MudText Typo="Typo.h4" Align="Align.Center" Class="text-white mt-5">
+                    Hi! I'm Huy and I'm a DotNet developer.
+                </MudText>
             </div>
         </MudPaper>
     </MudItem>
