--- a/src/WASM/Components/Portfolio.razor
+++ b/src/WASM/Components/Portfolio.razor
@@ -1,5 +1,4 @@
-﻿<MudGrid id="portfolio" Class="mt-5">
-    <SectionTitle Title="work gallery" />
+﻿<MudGrid Class="mt-5">
     <MudItem lg="3" md="4" sm="6" xs="12">
         <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
             <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
