--- a/src/WASM/Components/Posts.razor
+++ b/src/WASM/Components/Posts.razor
@@ -1,5 +1,5 @@
 ﻿<MudGrid id="posts" Class="mt-5">
-    <SectionTitle Title="latest posts" />
+    <SectionTitle Title="Visit My Latest Posts" />
     <MudItem lg="3" md="4" sm="6" xs="12" Class="d-flex justify-center">
         <MudCard Style="width: 400px">
             <MudCardMedia Image="./asset/img/post.jpg" Height="250" />
