--- a/src/WASM/Components/Services.razor
+++ b/src/WASM/Components/Services.razor
@@ -1,5 +1,5 @@
 ﻿<MudGrid id="services" Class="mt-5">
-    <SectionTitle Title="blazing services" />
+    <SectionTitle Title="Blazing Services I Developed" />
     <MudItem md="4" sm="6" xs="12">
         <MudCard Elevation="5">
             <MudCardContent>
