--- a/src/WASM/Components/Home.razor
+++ b/src/WASM/Components/Home.razor
@@ -3,7 +3,7 @@
         <MudPaper Class="d-flex justify-center" Elevation="5" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
             <div class="align-self-center">
                 <div class="d-block d-flex justify-center">
-                    <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="./asset/img/avatar.png" Height="200" Width="200" Class="rounded-circle" />
+                    <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="@($"{ApiEndPoints.ServerBaseUrl}/{AvatarPath}")" Height="200" Width="200" Class="rounded-circle" />
                 </div>
                 <MudText Typo="Typo.h4" Align="Align.Center" Class="text-white mt-5">
                     Hi! I'm Huy and I'm a DotNet developer.
@@ -15,3 +15,9 @@
         <MudFab Class="" Color="Color.Secondary" StartIcon="@Icons.Filled.KeyboardArrowDown" Link="#about" />
     </MudItem>
 </MudGrid>
+
+@code
+{
+    [Parameter]
+    public string AvatarPath { get; set; }
+}
