--- a/src/WASM/Components/Services.razor
+++ b/src/WASM/Components/Services.razor
@@ -1,58 +1,38 @@
 ﻿<MudGrid id="services" Class="mt-5">
     <SectionTitle Title="Blazing Services I Developed" />
-    <MudItem md="4" sm="6" xs="12">
-        <MudCard Elevation="5">
-            <MudCardContent>
-                <MudIcon Icon="@Icons.Filled.DesktopWindows" Color="Color.Primary" Style="font-size: 5rem;"/>
-                <MudText Typo="Typo.h5" Class="my-3"><strong>Web Developement</strong></MudText>
-                <MudText Typo="Typo.body1">Building web apps with DotNet</MudText>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem md="4" sm="6" xs="12">
-        <MudCard Elevation="5">
-            <MudCardContent>
-                <MudIcon Icon="@Icons.Filled.CloudSync" Color="Color.Primary" Style="font-size: 5rem;"/>
-                <MudText Typo="Typo.h5" Class="my-3"><strong>DevOps</strong></MudText>
-                <MudText Typo="Typo.body1">Upscaling apps using DevOps stacks</MudText>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem md="4" sm="6" xs="12">
-        <MudCard Elevation="5">
-            <MudCardContent>
-                <MudIcon Icon="@Icons.Filled.QueryStats" Color="Color.Primary" Style="font-size: 5rem;"/>
-                <MudText Typo="Typo.h5" Class="my-3"><strong>Data Analysist</strong></MudText>
-                <MudText Typo="Typo.body1">Visualizing data by Power Bi</MudText>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem md="4" sm="6" xs="12">
-        <MudCard Elevation="5">
-            <MudCardContent>
-                <MudIcon Icon="@Icons.Custom.Brands.Apple" Color="Color.Primary" Style="font-size: 5rem;"/>
-                <MudText Typo="Typo.h5" Class="my-3"><strong>Apple Services</strong></MudText>
-                <MudText Typo="Typo.body1">Apple Services</MudText>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem md="4" sm="6" xs="12">
-        <MudCard Elevation="5">
-            <MudCardContent>
-                <MudIcon Icon="@Icons.Custom.Brands.Microsoft" Color="Color.Primary" Style="font-size: 5rem;"/>
-                <MudText Typo="Typo.h5" Class="my-3"><strong>Windows Services</strong></MudText>
-                <MudText Typo="Typo.body1">Windows Services</MudText>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem md="4" sm="6" xs="12">
-        <MudCard Elevation="5">
-            <MudCardContent>
-                <MudIcon Icon="@Icons.Custom.Brands.Linux" Color="Color.Primary" Style="font-size: 5rem;"/>
-                <MudText Typo="Typo.h5" Class="my-3"><strong>Linux Services</strong></MudText>
-                <MudText Typo="Typo.body1">Linux Services</MudText>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
+
+    @foreach (var item in ServiceList)
+    {
+        string displayIcon = string.Empty;
+
+        switch (item.DisplayIcon)
+        {
+            case "Icons.Filled.DesktopWindows":
+                displayIcon = Icons.Filled.DesktopWindows;
+                break;
+            case "Icons.Filled.CloudSync":
+                displayIcon = Icons.Filled.CloudSync;
+                break;
+            case "Icons.Filled.QueryStats":
+                displayIcon = Icons.Filled.QueryStats;
+                break;
+        }
+
+        <MudItem md="4" sm="6" xs="12">
+            <MudCard Elevation="5">
+                <MudCardContent>
+                    <MudIcon Icon="@displayIcon" Color="Color.Primary" Style="font-size: 5rem;" />
+                    <MudText Typo="Typo.h5" Class="my-3"><strong>@item.Name</strong></MudText>
+                    <MudText Typo="Typo.body1">@item.Description</MudText>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+    }
 
 </MudGrid>
+
+@code
+{
+    [Parameter]
+    public List<ServiceDto> ServiceList { get; set; }
+}
