--- a/src/WASM/Components/Skills.razor
+++ b/src/WASM/Components/Skills.razor
@@ -2,59 +2,31 @@
     <MudItem xs="12">
         <MudPaper Elevation="5" Height="300" Class="pa-5">
             <MudGrid>
-                <MudItem md="6" sm="12" xs="12">
-                    <div class="row">
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6">C#</MudText>
+
+                @foreach (var item in SkillList)
+                {
+                    <MudItem md="6" sm="12" xs="12">
+                        <div class="row">
+                            <div class="col-6">
+                                <MudText Typo="Typo.h6">@item.Name</MudText>
+                            </div>
+                            <div class="col-6">
+                                <MudText Typo="Typo.h6" Class="text-end">@(item.ScorePercentage*100)%</MudText>
+                            </div>
+                            <div class="col-12">
+                                <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="Decimal.ToDouble(item.ScorePercentage*100)" />
+                            </div>
                         </div>
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6" Class="text-end">90%</MudText>
-                        </div>
-                        <div class="col-12">
-                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="90" />
-                        </div>
-                    </div>
-                </MudItem>
-                <MudItem md="6" sm="12" xs="12">
-                    <div class="row">
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6">SQL</MudText>
-                        </div>
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6" Class="text-end">50%</MudText>
-                        </div>
-                        <div class="col-12">
-                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="50" />
-                        </div>
-                    </div>
-                </MudItem>
-                <MudItem md="6" sm="12" xs="12">
-                    <div class="row">
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6">Dot Net</MudText>
-                        </div>
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6" Class="text-end">70%</MudText>
-                        </div>
-                        <div class="col-12">
-                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="70" />
-                        </div>
-                    </div>
-                </MudItem>
-                <MudItem md="6" sm="12" xs="12">
-                    <div class="row">
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6">Azure</MudText>
-                        </div>
-                        <div class="col-6">
-                            <MudText Typo="Typo.h6" Class="text-end">50%</MudText>
-                        </div>
-                        <div class="col-12">
-                            <MudProgressLinear Color="Color.Primary" Rounded="true" Size="Size.Medium" Value="50" />
-                        </div>
-                    </div>
-                </MudItem>
+                    </MudItem>
+                }
+
             </MudGrid>
         </MudPaper>
     </MudItem>
 </MudGrid>
+
+@code
+{
+    [Parameter]
+    public List<SkillDto> SkillList { get; set; }
+}
