--- a/src/WASM/Components/Archievements.razor
+++ b/src/WASM/Components/Archievements.razor
@@ -1,38 +1,22 @@
 ﻿<MudGrid Class="mt-5">
-    <MudItem md="3" sm="6" xs="12">
-        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
-            <div>
-                <MudText Typo="Typo.h4" Class="d-block mud-primary-text text-center"><strong>111</strong></MudText>
-                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
-                <MudText Typo="Typo.h5" Class="d-block text-center">Happy Clients</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem md="3" sm="6" xs="12">
-        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
-            <div>
-                <MudText Typo="Typo.h4" Class="d-block mud-primary-text text-center"><strong>333</strong></MudText>
-                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
-                <MudText Typo="Typo.h5" Class="d-block text-center">Projects Finished</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem md="3" sm="6" xs="12">
-        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
-            <div>
-                <MudText Typo="Typo.h4" Class="d-block mud-primary-text text-center"><strong>555</strong></MudText>
-                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
-                <MudText Typo="Typo.h5" Class="d-block text-center">Certificates Archieved</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
-    <MudItem md="3" sm="6" xs="12">
-        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
-            <div>
-                <MudText Typo="Typo.h4" Class="d-block mud-primary-text text-center"><strong>777</strong></MudText>
-                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
-                <MudText Typo="Typo.h5" Class="d-block text-center">Awards Won</MudText>
-            </div>
-        </MudPaper>
-    </MudItem>
+
+    @foreach (var item in ArchievementList)
+    {
+        <MudItem md="3" sm="6" xs="12">
+            <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
+                <div>
+                    <MudText Typo="Typo.h4" Class="d-block mud-primary-text text-center"><strong>@item.Count</strong></MudText>
+                    <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true" />
+                    <MudText Typo="Typo.h5" Class="d-block text-center">@item.Name</MudText>
+                </div>
+            </MudPaper>
+        </MudItem>
+    }
+
 </MudGrid>
+
+@code
+{
+    [Parameter]
+    public List<ArchievementDto> ArchievementList { get; set; }
+}
