--- a/src/WASM/Shared/AppBar.razor
+++ b/src/WASM/Shared/AppBar.razor
@@ -1,9 +1,12 @@
-﻿<MudAppBar>
+﻿@inject NavigationManager NavManager
+
+<MudAppBar>
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
     &nbsp; Huy NG
     <MudSpacer />
     <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" />
     <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" />
+    <MudIconButton Icon="@Icons.Filled.Login" Color="Color.Inherit" OnClick="Login" />
 </MudAppBar>
 
 <Drawer DrawerOpen="_drawerOpen" />
@@ -12,8 +15,13 @@
 {
     private bool _drawerOpen = false;
 
-    void DrawerToggle()
+    private void DrawerToggle()
     {
         _drawerOpen = !_drawerOpen;
+    }
+
+    private void Login()
+    {
+        NavManager.NavigateTo("/admin");
     }
 }
