--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -8,7 +8,8 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using WASM
-@using WASM.Components
+@using WASM.Components.Public
+@using WASM.Components.Admin
 @using WASM.Shared
 @using WASM.Interfaces
 @using WASM.Static
