--- a/src/WASM/Shared/AdminNavMenu.razor
+++ b/src/WASM/Shared/AdminNavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<MudNavMenu>
     <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Home" Href="admin">Dashboard</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Person" Href="admin/user">Profile</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Person" Href="admin/profile">Profile</MudNavLink>
     <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Badge" Href="admin/skills">Skill</MudNavLink>
     <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Layers" Href="admin/services">Services</MudNavLink>
     <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Image" Href="admin/images">Images</MudNavLink>
